hjj/css/app.css
body,div,table,ul,li,input,textarea  {
    background-color: #ffe7f7 !important;
    background-size: 100%;
    word-wrap: break-word;      
}

[data-role=navbar] a { 
    font-size: 1.2em !important; 
    padding-top: 0.05em !important;
    padding-bottom: 0.05em !important;
}

#showmsg_floor [data-role=navbar] a { 
    font-size: 0.9em !important; 
    padding-top: 0.05em !important;
    padding-bottom: 0.05em !important;
}

.star {
    color: #d4db8e;
    font-weight: bold;
}

a:visited {
    color: #FF0000;
}

img {
    width  : 100% !important;
    height : auto !important;
}

.smallgif {
    width  : 28px !important;
    height : 18px !important;
}

.smallbox,.pager,.setting,
#board_content,#board_info,#thread_list,#thread_action,
#thread_content,#thread_info,
#search_content
{
    border: 0.1em solid rgb(153, 204, 0); 
}

.floor,.onethread {
    border-bottom: 0.1em solid rgb(153, 204, 0); 
    margin: 0.8em 0.2em 1.2em; 
    text-indent: 0em; 
    padding-bottom: 0.25em;
}

#board_title, #thread_title {
    font-weight: bold;
}


.reply {
    text-align : right;
    display : inline-block;
    width : 13%;
}

.left_string {
    display : inline-block;
    width : 14%;
}

.hot {
    text-align : right;
    display : inline-block;
    width : 18%;
}

input,select {
    width: 100% ;
    -webkit-box-sizing: border-box; 
    -moz-box-sizing: border-box;   
    box-sizing: border-box;       
}

.small_input { width: 15% ; }



.smallnav {
    text-align : left;
    width: 16.65% !important;  
    clear: none !important;  
}

textarea.ui-input-text { height: inherit !important}

/*[>panel start {{ <]*/
/*.paneldiv { border: 0.1em solid rgb(153, 204, 0); }*/
/*.ui-panel { width: 70%; }*/
/*.ui-panel-animate.ui-panel-page-content-position-left {*/
        /*left: 0;*/
        /*right: 0;*/
        /*-webkit-transform: translate3d(70%,0,0);*/
        /*-moz-transform: translate3d(70%,0,0);*/
        /*transform: translate3d(70%,0,0);*/
/*}*/
/*[data-role="panel"] input { width: 70% ; }*/
/*panel end }} */

/*.in, .out {*/
    /*-webkit-animation-fill-mode: none !important;*/
/*}*/

/** {*/
  /*[> prevent callout when holding tap on links (the native dialog that comes up) <]*/
  /*-webkit-touch-callout: none; */

  /*[> prevent webkit from resizing text to fit <]*/
  /*-webkit-text-size-adjust: none; */

  /*[> make transparent link selection, adjust last value opacity 0 to 1.0 <]*/
  /*-webkit-tap-highlight-color: rgba(0,0,0,0);*/

  /*[> prevent copy paste, to allow, change 'none' to 'text' <]*/
  /*-webkit-user-select: none; */
/*}*/

// turn off webkit checkbox style, works for other inputs too
/*input[type="checkbox"] { -webkit-appearance: none; }*/

// placeholder text opacity
/*input::-webkit-input-placeholder { opacity: .8; }*/

/*ul.ui-listview *.ui-btn-up-e,*/
/*ul.ui-listview *.ui-btn-down-e,*/
/*ul.ui-listview *.ui-btn-hover-e {*/
   /*border: 1px solid #FBFCFE !important;*/
   /*background: #E7F1FD !important;*/
   /*font-weight: bold !important;*/
   /*color: #57576B !important;*/
   /*text-shadow: 0 1px 1px white !important;*/
   /*background-image: -webkit-gradient(linear,left top,left bottom,from( white ),to( #E7F1FD )) !important;*/
   /*background-image: -webkit-linear-gradient( white , #E7F1FD ) !important;*/
   /*background-image: -moz-linear-gradient( white , #E7F1FD ) !important;*/
   /*background-image: -ms-linear-gradient( white , #E7F1FD ) !important;*/
   /*background-image: -o-linear-gradient( white , #E7F1FD ) !important;*/
   /*background-image: linear-gradient( white , #E7F1FD ) !important;*/
/*}*/

/*ul.ui-listview *.ui-btn-up-e a.ui-link-inherit,*/
/*ul.ui-listview *.ui-btn-down-e a.ui-link-inherit,*/
/*ul.ui-listview *.ui-btn-hover-e a.ui-link-inherit { color: #57576B !important; }*/

 /*.in,.out{-webkit-animation-timing-function: ease-in-out;-webkit-animation-duration:50ms !important;}*/

 /*.ui-shadow, .ui-btn-up-a, .ui-btn-hover-a, .ui-btn-down-a, .ui-body-b, .ui-btn-up-b, .ui-btn-hover-b, .ui-btn-down-b, .ui-bar-c, .ui-body-c, .ui-btn-up-c, .ui-btn-hover-c, .ui-btn-down-c, .ui-bar-c, .ui-body-d, .ui-btn-up-d, .ui-btn-hover-d, .ui-btn-down-d, .ui-bar-d, .ui-body-e, .ui-btn-up-e, .ui-btn-hover-e, .ui-btn-down-e, .ui-bar-e, .ui-overlay-shadow, .ui-shadow, .ui-btn-active, .ui-body-a, .ui-bar-a {*/
     /*text-shadow: none !important;*/
     /*box-shadow: none !important;*/
     /*-webkit-box-shadow: none !important;*/
 /*}*/

